syntax = "proto3";

package golem.component;

import "wasm/ast/type.proto";

message FunctionConstraints {
  repeated FunctionConstraint constraints = 1;
}

message FunctionConstraint {
   string function_name = 1;
   repeated wasm.ast.Type argument_types = 2;
   repeated wasm.ast.Type result_types = 3;
}
